ACLOCAL_AMFLAGS = -I m4 --install
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src mpi
EXTRA_DIST = src/modeltest.pro \
						 example-data \
						 autogen.sh \
						 build.sh \
						 pll-modules-0.1.0.tar.gz libpll-0.3.2.tar.gz \
             src/mtgraphics.qrc \
						 src/gui2/* \
             src/gui/* \
             src/IMG/* \
						 src/mtgraphics.qrc


